[gd_scene load_steps=8 format=3 uid="uid://ktpcywh6e5tr"]

[ext_resource type="Texture2D" uid="uid://cjk3kicdde41g" path="res://assets/achievement.png" id="1_uhwd6"]
[ext_resource type="Script" path="res://ui/achievements/Achievement.gd" id="2_hdpj7"]
[ext_resource type="Shader" path="res://ui/achievements/achievement.gdshader" id="2_hp188"]
[ext_resource type="Texture2D" uid="uid://chkp5rhucac5h" path="res://assets/codes.png" id="3_gog55"]
[ext_resource type="AudioStream" uid="uid://ibiqxk0peqso" path="res://assets/sfx/ui_point.ogg" id="5_m74m2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r15ax"]
resource_local_to_scene = true
shader = ExtResource("2_hp188")
shader_parameter/id = 0
shader_parameter/base = ExtResource("3_gog55")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hhvtx"]
size = Vector2(6, 6)

[node name="Achievement" type="TextureRect"]
focus_mode = 2
texture = ExtResource("1_uhwd6")
script = ExtResource("2_hdpj7")
zero = Color(1, 1, 1, 1)
one = Color(1, 0.733333, 0, 1)

[node name="Image" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_r15ax")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_hhvtx")

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_m74m2")
volume_db = -15.0
bus = &"Sound"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
